docs: update cookbooks and readme